--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "compressorjs": "^1.0.7",
+    "jss-rtl": "^0.3.0",
     "node-sass": "^5.0.0",
-    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
